# simple-books-api

./: .gitignore  Cargo.toml  Dockerfile
migrations/: 20241129023942_create_books_table.down.sql  20241129023942_create_books_table.up.sql
src/: main.rs
