[package]
edition = "2021"
name = "simple-books-api"
version = "0.1.0"

[dependencies]
axum = "0.6"
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"]}
tokio = {version = "1", features = ["full"]}
tower = "0.4"
tower-http = {version = "0.3", features = ["cors"]}
